--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-genny",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "react-easy-state": "^5.0.0",
     "react-router-dom": "^4.2.2",
     "react-spinkit": "^3.0.0",
+    "reactjs-popup": "^1.0.5",
     "roboto-fontface": "^0.9.0",
     "uuid": "^3.2.1"
   },
