--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "transform-class-properties",
     "transform-async-to-generator",
     "babel-plugin-transform-runtime",
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    "transform-inline-environment-variables"
   ]
 }
