--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "SET API_LOCATION=http://localhost:3000 && parcel src/index.html",
+    "dev": "set API_LOCATION http://localhost:3000 && parcel src/index.html",
+    "dev-windows": "SET API_LOCATION=http://localhost:3000 && parcel src/index.html",
     "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -36,7 +37,8 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0"
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "parcel-bundler": "^1.9.7"
   },
   "standard": {
     "parser": "babel-eslint"
