--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "node-sass": "^4.9.3",
     "parcel-bundler": "^1.9.7"
   },
   "standard": {
