added files and changed post url

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "now-start": "json-server --port 80",
-    "deploy": "now --regions bru",
+    "start": "json-server db.json",
+    "deploy": "now && now alias",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "now": {
+    "alias": "gennybackend"
+  },
   "dependencies": {
     "json-server": "^0.12.1"
   }
